<resources>
    <string name="app_name">Calculator</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_zero">0</string>
    <string name="button_point">.</string>
    <string name="button_equals">=</string>
    <string name="button_increment">+</string>
    <string name="button_decrement">-</string>
    <string name="button_multiply">x</string>
    <string name="button_div">/</string>
    <string name="button_percent">%</string>
    <string name="button_clear_entry">CE</string>
    <string name="button_clear_all">AC</string>
    <string name="button_clear">C</string>
    <string name="button_change_of_sign">+/-</string>
    <string name="button_tan">tan</string>
    <string name="button_cos">cos</string>
    <string name="button_sin">sin</string>
    <string name="button__1_x">1/x</string>
    <string name="button_memory_plus">M+</string>
    <string name="button_memory_minus">M-</string>
    <string name="button_memory_save">MS</string>
    <string name="button_memory_clear">MC</string>
    <string name="button_memory_read">MR</string>
    <string name="button_sqrt">√</string>
    <string name="button_x_square">x²</string>
</resources>
